--- a/template.conf
+++ b/template.conf
@@ -26,30 +26,45 @@ server {
 	access_log /var/log/nginx/{{DOMAIN}}.access.log;
 	error_log /var/log/nginx/{{DOMAIN}}.error.log;
 
-        location ~ ^/pluginfile\.php {
-                fastcgi_split_path_info ^(.+\.php)(/.+)$; fastcgi_index index.php; fastcgi_pass unix:/run/php/php7.0-fpm.sock; include fastcgi_params; fastcgi_param PATH_INFO $fastcgi_path_info; fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
+    location ~ ^/pluginfile\.php {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		fastcgi_index index.php;
+		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
+		include fastcgi_params;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
 
-        location ~ ^/draftfile\.php {
-                fastcgi_split_path_info ^(.+\.php)(/.+)$; fastcgi_index index.php; fastcgi_pass unix:/run/php/php7.0-fpm.sock; include fastcgi_params; fastcgi_param PATH_INFO $fastcgi_path_info; fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
+    location ~ ^/draftfile\.php {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		fastcgi_index index.php;
+		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
+		include fastcgi_params;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
 
-        location / {
-                try_files $uri $uri/ /index.php?$args;
-        }
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
 
-	location ~ /maintenance/
-	{
+	location ~ /maintenance/ {
 		root /www{{CLUSTER}}/t2sites/{{DOMAIN}}/sitedata;
 		rewrite ^/.*(/maintenance/.*)$ $1 break;
 	}
 
-        location ~ [^/]\.php(/|$)
-        { fastcgi_split_path_info ^(.+\.php)(/.+)$; fastcgi_index index.php; fastcgi_pass unix:/run/php/php7.0-fpm.sock; include fastcgi_params; fastcgi_param PATH_INFO $fastcgi_path_info; fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; }
+    location ~ [^/]\.php(/|$) { 
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		fastcgi_index index.php;
+		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
+		include fastcgi_params;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	}
 
 	location ~*  \.(jpg|jpeg|png|gif|ico|css|js)$ {
         expires 365d;
-        }
+    }
 }
 
 # Redirect http to https
@@ -58,7 +73,7 @@ server {
 	listen [::]:80;
 	server_name {{DOMAIN}};
 
-	location ~ ^/.well-known {
+	location ~ ^/.well-known  {
 	    root /www{{CLUSTER}}/acmetest/;
     }
 	
