--- a/template.conf
+++ b/template.conf
@@ -1,5 +1,5 @@
 server {
-	# Ports to listen on, uncomment one.
+	# Ports to listen on, uncomment one
 	listen 443 ssl;
 	listen [::]:443 ssl;
         
