server_name now taken from source file server_name var instead of filename, template modified over this functionality

--- a/template.conf
+++ b/template.conf
@@ -4,7 +4,7 @@ server {
 	listen [::]:443 ssl;
         
 	# Server name to listen for
-	server_name {{DOMAIN}};
+	server_name {{SERVER_NAME}};
 
 	# Path to document root
 	root /www{{CLUSTER}}/t2sites/{{DOMAIN}}/wwwroot;
@@ -23,8 +23,8 @@ server {
 	index index.php index.html;
 
 	# Overrides logs defined in nginx.conf, allows per site logs.
-	access_log /var/log/nginx/{{DOMAIN}}.access.log;
-	error_log /var/log/nginx/{{DOMAIN}}.error.log;
+	access_log /var/log/nginx/{{SERVER_NAME}}.access.log;
+	error_log /var/log/nginx/{{SERVER_NAME}}.error.log;
 
 
     location / {
@@ -54,11 +54,11 @@ server {
 server {
 	listen 80;
 	listen [::]:80;
-	server_name {{DOMAIN}};
+	server_name {{SERVER_NAME}};
 
 	location ~ ^/.well-known {
 	    root /www{{CLUSTER}}/acmetest/;
     }
 	
-	return 301 https://{{DOMAIN}}$request_uri;
+	return 301 https://{{SERVER_NAME}}$request_uri;
 }
